--- a/src/html/include/footer.html
+++ b/src/html/include/footer.html
@@ -1,1 +1,58 @@
-<h1>尾部</h1>
+<!--尾部上方查看熊掌号-->
+<div class="footer_top">
+	<div class="footer_top_wrap">
+		<img src="../../img/index_img/timg.jpg"/>
+		<h3>米卡米卡蛋糕</h3>
+		<p>订蛋糕首选米卡米卡蛋糕官网【免费配送】</p>
+		<input type="button" name="" id="" value="查看熊掌号" />
+	</div>
+</div>
+<!--尾部中间公司简介-->
+<div class="footer_middle">
+	<div class="footer_middle_wrap">
+		<ul class="help">
+			<p>帮助中心</p>
+			<li><a href="#">如何订购</a></li>
+			<li><a href="#">配送范围</a></li>
+			<li><a href="#">会员升级</a></li>
+			<li><a href="#">支付方式</a></li>
+		</ul>
+		<ul class="introduce">
+			<p>公司简介</p>
+			<li><a href="#">关于米卡米卡</a></li>
+			<li><a href="#">品牌创始人</a></li>
+			<li><a href="#">加入我们</a></li>
+			<li><a href="#">最新新闻</a></li>
+			<li><a href="#">明星大咖</a></li>
+			<li><a href="#">新闻动态</a></li>
+		</ul>
+		<ul class="friends">
+			<p>让我们成为朋友</p>
+			<li><a href="#">新浪微博</a></li>
+			<li><a href="#">天猫店铺</a></li>
+			<li><a href="#">京东店铺</a></li>
+		</ul>
+		<div class="code">
+			<p>嗨！~你好，听说你喜欢我们好久了，来交个朋友吧~</p>
+			<p>扫描下方二维码</p>
+			<p>关注我们的微信公众号</p>
+			<p>微信下单有新人专享优惠券哦！</p>
+			<img src="../../img/index_img/1e79cb4d4e927eb81a092229d559cb56.png"/>
+		</div>
+	</div>
+</div>
+<!--尾部下面订购热线合作伙伴-->
+<div class="footer_bottom">
+	<div class="footer_bottom_wrap">
+		<div class="phone">
+			<p>订购热线：<span>400-606-7757</span>（周一至周日 08:00-20:00）</p>
+		</div>
+		<div class="partner">
+			<p><span>合作伙伴:</span>一点排行网|特色餐饮加盟|163网盘|小吃加盟|海南事业单位招聘|黑枸杞的功效与作用|火车票|奶茶店加盟|北京律师|咖啡加盟|饮料招商网</p>
+			<p>冒菜加盟品牌|北京律师|创业资讯|食品招商网|加盟连锁|代写毕业论文|全民饮食网|中国有机食品网|二维码防伪标签|北大青鸟|快餐加盟|烘培设备</p>
+			<p>酒店餐具|麻辣烫加盟|微商品牌|香港IPO上市|挂海论坛|法国红酒代理|冒菜加盟|加盟店排行榜|代交社保的公司|医疗器械信息网|迅载网盘</p>
+			<p> 发布快车|商标查询|华印医疗旅游|装修论坛|电脑技术|ghost win7|低调看直播</p>
+			<i>京ICP备12021305号-2 公司：米卡米卡（北京）食品有限公司 地址：北京市海淀区黑泉路宝盛里观林园35号micamika 电话：010-82817155</i>
+		</div>
+	</div>
+</div>
