--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -18,11 +18,11 @@
 	<div class="header_middle_wrap"> 
 		<div class="logo">
 			<h1>
-				<a href="javascript:void(0)"><img src="img/index_img/70eeab7989e51282d1a26c4b16ffa85e.png"/></a>
+				<a href="javascript:void(0)"><img src="/img/index_img/70eeab7989e51282d1a26c4b16ffa85e.png"/></a>
 			</h1>
 		</div>
 		<div class="code">
-			<img src="img/index_img/1e79cb4d4e927eb81a092229d559cb56.png" alt="" />
+			<img src="/img/index_img/1e79cb4d4e927eb81a092229d559cb56.png" alt="" />
 		</div>
 		<div class="phone">
 			订购电话：400-606-7757
@@ -37,7 +37,7 @@
 	<div class="header_bottom_wrap">
 		<ul>
 			<li><a href="#">首页</a></li>
-			<li><a href="#">全部蛋糕</a></li>
+			<li><a href="/html/allCakes.html">全部蛋糕</a></li>
 			<li><a href="#">下午茶19国</a></li>
 			<li><a href="#">企业专区</a></li>
 			<li><a href="#">蛋糕资讯</a></li>
