--- a/src/html/include/sideBar.html
+++ b/src/html/include/sideBar.html
@@ -1,3 +1,27 @@
-<div>
+<div class="myOrder">
 	
 </div>
+<div class="_24hours">
+	
+</div>
+<div class="miniCart">
+	<i></i>
+	<p>购<br />物<br />车</p>
+	<span>0</span>
+</div>
+<div class="sideBar_bottom">
+	<div class="sale">
+	
+	</div>
+	<div class="code">
+		
+	</div>
+	<div class="phone">
+		
+	</div>
+	<div class="backTop">
+		
+	</div>
+</div>
+
+
