--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -36,7 +36,7 @@
 <div class="header_bottom">
 	<div class="header_bottom_wrap">
 		<ul>
-			<li><a href="#">首页</a></li>
+			<li><a href="/index.html">首页</a></li>
 			<li><a href="/html/allCakes.html">全部蛋糕</a></li>
 			<li><a href="#">下午茶19国</a></li>
 			<li><a href="#">企业专区</a></li>
