--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -1,7 +1,10 @@
 <!--头部上方链接-->
 <div class="header_top">
 	<div class="header_top_wrap">
-		<p>您好!请<a href="#">登陆</a>或<a href="#">加入会员</a></p>
+		<p>您好!请
+			<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">登录</button>或
+			<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">加入会员</button>
+		</p>
 		<ul>
 			<li><a href="javascript:void(0)">礼金卡充值 </a></li>
 			<li><a href="javascript:void(0)">如何订购</a></li>
