--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -1,3 +1,4 @@
+
 /*头部*/
 .header{
     width: 100%;
@@ -24,7 +25,11 @@
                 line-height: 31px;
                 margin-left: 100px;
                 float: left;
-                a{
+                button{
+                    font-size: 12px;
+                    background-color: #fff;
+                    outline: none;
+                    border: none;
                     color: #dc4f45;
                     padding: 0 4px;
                 }
