--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,6 +11,7 @@ em, i, b, strong{
 }
 ul, ol { list-style:none; } 
 a {text-decoration:none; }
+a:hover{text-decoration:none;}
 
 html,body{
     height: 100%;
@@ -22,16 +23,23 @@ html,body{
     min-height: 2624px;
     position: relative;
     /*轮播图*/
-    .banner{
+    .carousel{
         height: 589px;
         position: relative;
         overflow: hidden;
-        .banner_img{
-            width: 100%;           
-            li{
-                position: absolute;
-                left: 50%;
-                margin-left: -960px;
+        .carousel-inner{
+            width: 100%; 
+            height: 589px;          
+            div{
+                height: 589px;
+                img{
+                    width: 1920px;
+                    height: 589px;
+//                  position: absolute;
+//                  left: 50%;
+//                  margin-left: -960px;
+                }
+
             }
             .leftArrow{
                 width: 45px;
@@ -268,5 +276,7 @@ html,body{
            }
        }
    }
+   //模态框
+   
 }
 
