--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,6 +12,7 @@ em, i, b, strong{
 ul, ol { list-style:none; } 
 a {text-decoration:none; }
 a:hover{text-decoration:none;}
+a:focus{text-decoration:none;}
 
 html,body{
     height: 100%;
