--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -2,8 +2,8 @@
 <div class="header_top">
 	<div class="header_top_wrap">
 		<p class="helloUser">您好!请
-			<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">登录</button>或
-			<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">加入会员</button>
+			<button type="button" class="btn btn-primary btn-lg _btn1" data-toggle="modal" data-target="#myModal">登录</button>或
+			<button type="button" class="btn btn-primary btn-lg _btn2" data-toggle="modal" data-target="#myModal">加入会员</button>
 		</p>
 		<ul>
 			<li><a href="javascript:void(0)">礼金卡充值 </a></li>
@@ -31,7 +31,7 @@
 			订购电话：400-606-7757
 		</div>
 		<div class="cart">
-			<a href="javascript:void(0)">购物车 ( 0 )</a>
+			<a href="/html/cart.html">购物车 ( <span>0</span> )</a>
 		</div>
 	</div>
 </div>
@@ -57,7 +57,7 @@
 		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		        <!-- Nav tabs -->
 				  <ul class="nav nav-tabs" role="tablist">
-				    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">登录</a></li>
+				    <li role="presentation"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">登录</a></li>
 				    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">注册</a></li>
 				  </ul>
 		      </div>
