--- a/src/html/include/sideBar.html
+++ b/src/html/include/sideBar.html
@@ -19,9 +19,11 @@
 	<div class="phone">
 		
 	</div>
-	<div class="backTop">
-		
-	</div>
+	<a href="#">
+		<div class="backTop">
+		</div>
+	</a>
+	
 </div>
 
 
