--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -67,7 +67,7 @@
 				  <div class="tab-content">
 				  	<!--登录框-->
 				    <div role="tabpanel" class="tab-pane active" id="home">
-				    	<form class="form-horizontal">
+				    	<form class="form-horizontal" onsubmit="return false">
 						  <div class="form-group">
 						    <label for="inputName3" class="col-sm-2 control-label">用户名</label>
 						    <div class="col-sm-10">
@@ -84,29 +84,26 @@
 						    <div class="col-sm-offset-2 col-sm-10">
 						      <div class="checkbox">
 						        <label>
-						          <input type="checkbox"> 记住密码
+						          <input type="checkbox" id="remenber"> 记住密码
 						        </label>
-						        <label>
-						          <input type="checkbox"/>两周内自动登录
-						        </label>
-						        
 						      </div>
 						    </div>
 						  </div>
 						  <div class="form-group">
 						    <div class="col-sm-offset-2 col-sm-10">
 						      <button type="submit" class="btn btn-default" id="micamikaLogin">登录</button>
-						      <a href="#">忘记密码</a>
+						      <a href="#">忘记密码</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="display: none;color: red;">用户名或密码错误，请重新输入</span>
 						    </div>
 						  </div>
 						</form>
 				    </div>
 				    <!--注册框-->
 				    <div role="tabpanel" class="tab-pane" id="profile">
-				    	<form>
+				    	<form onsubmit="return false">
 						  <div class="form-group">
 						    <label for="exampleInputEmail1">注册账号：</label>
 						    <input type="text" class="form-control" id="exampleInputName1" placeholder="用户名/邮箱地址/手机号">
+						    <span style="color: red;display: none;" id="exsit">用户名已占用</span>
 						  </div>
 						  <div class="form-group">
 						    <label for="exampleInputPassword1">密码：</label>
@@ -123,7 +120,7 @@
 						      <input type="checkbox" id="agree">我已阅读并同意 <a href="#">会员注册协议</a>和 <a href="#">隐私保护政策</a>
 						    </label>
 						  </div>
-						  <button type="submit" class="btn btn-default" id="micamikaRegister">注册</button>
+						  <button type="submit" class="btn btn-default" id="micamikaRegister">注册</button>&nbsp;&nbsp;&nbsp;&nbsp;
 						  <span id="registerFail"></span>
 						</form>
 				    </div>
