--- a/src/sass/cart.scss
+++ b/src/sass/cart.scss
@@ -20,6 +20,7 @@ html,body{
 
 .content{
     width: 100%;
+    height: 100%;
     .wrap{
         width: 1152px;
         margin: 0 auto;
@@ -193,5 +194,60 @@ html,body{
                 }
             }
         }
+    }
+}
+.occlusion{
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0.3;
+    position: fixed;
+    display: none;
+    z-index: 2;
+    left: 0;
+    top: 0;
+}
+.payBox{
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    background-color: #fff;
+    border: 2px solid #ccc;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    display: none;
+    z-index: 3;
+    h3{
+        text-align: center;
+        font-weight: normal;
+        margin: 10px 0; 
+    }
+    select{
+        width: 150px;
+        height: 30px;
+        margin-left: 10px;
+    }
+    input{
+        margin: 0 auto;
+        width: 470px;
+        height: 50px;
+        display: block;
+    }
+    @mixin _inp{
+       width: 50px;
+        height: 30px;
+        float: left;
+        margin-top: 50px;
+    }
+    input[type=submit]{
+        @include _inp;
+        margin-left: 170px;
+        margin-right: 10px;
+    }
+    input[type=button]{
+        @include _inp;
     }
 }
